--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,13 @@ html {
   font-family: "Poppins", system-ui, sans-serif;
   scroll-behavior: smooth;
 }
+
+@layer components {
+  .shadow-board-description {
+    @apply p-6 border-4 border-black shadow-[12px_12px_0px_0px_#000];
+  }
+
+  .shadow-board-contact-description {
+    @apply p-6 border-4 border-black shadow-[8px_8px_0px_0px_#000];
+  }
+}
